fix(styles): horizontal scroll remove in carousel [ci visual] (#2904)
* fix(styles): add media queries to corousel [ci visual]

* fix(styles): delete media queries and add fd-focus [ci visual]

--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -5,6 +5,12 @@
 $block: #{$fd-namespace}-carousel;
 $button: #{$fd-namespace}-button;
 
+#{$block} {
+  @include fd-focus() {
+    outline: 0.0625rem dotted;
+  }
+}
+
 .#{$block} {
   $fd-carousel-page-indicator-border: 0.0625rem solid var(--sapPageFooter_BorderColor) !default;
   $fd-carousel-button-size: 2.125rem !default;
@@ -30,7 +36,7 @@ $button: #{$fd-namespace}-button;
   }
 
   width: 100%;
-  min-width: 15.5rem;
+  min-width: 11rem;
   max-width: 100%;
   height: 100%;
 
@@ -116,8 +122,8 @@ $button: #{$fd-namespace}-button;
       flex-wrap: wrap;
     }
 
-    width: 9rem;
-    padding: 0.5rem;
+    min-width: 7rem;
+    padding: 0.5rem 0;
   }
 
   &__page-indicator {
